# LearningRtAudio

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  RtAudioCallbacks.hpp  RtAudioGui_en_US.ts  WaveTableCallback.hpp  guislider.cpp  guislider.h  guislider.ui  loadLibSndFile.cmake  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
RtAudioLib/: RtAudioError.h
TestRtAudioLib/: CMakeLists.txt  TestRtAudio.cpp  TestRtAudio.h  WaveTableCallback.cpp  WaveTableCallback.h  WaveTableCallback.hpp  waveTable.cpp  waveTable.h
libs/TestRtAudio/: CMakeLists.txt
libs/TestRtAudio/TestRtAudioLib/: CMakeLists.txt  OscWaveTable.cpp  OscWaveTable.h  RangeUtils.cpp  RangeUtils.h  TestRtAudio.cpp  TestRtAudio.h  WaveTableCallback.cpp  WaveTableCallback.h  waveTable.cpp  waveTable.h
libs/TestRtAudio/TestRtAudioLib/Components/: CircularBuffer.h  DebounceVca.cpp  DebounceVca.h  FiltersComponent.cpp  FiltersComponent.h  GateConstants.h  MetronomeComponent.cpp  MetronomeComponent.h  OscWaveTable.cpp  OscWaveTable.h  OscWaveTable2Addative.cpp  OscWaveTable2Addative.h  OscWaveTableAddative.cpp  OscWaveTableAddative.h  OscWaveTableSine.cpp  OscWaveTableSine.h  OscWaveTableTiangle.cpp  OscWaveTableTiangle.h  PlayWavFile.cpp  PlayWavFile.h  PlayheadMarker.cpp  PlayheadMarker.h  RangeUtils.cpp  RangeUtils.h  RtGuiControl.cpp  RtGuiControl.h  SimpleAdsrComponent.cpp  SimpleAdsrComponent.h  SwitchAmpComponent.cpp  SwitchAmpComponent.h  SwitchNHoldComponent.cpp  SwitchNHoldComponent.h  VcaGateComponent.cpp  VcaGateComponent.h
libs/TestRtAudio/TestRtAudioLib/Components/Envelopes/: AdsrRender.cpp  AdsrRender.h  AdsrStep.cpp  AdsrStep.h  AdsrStepTimeDomainPower.cpp  AdsrStepTimeDomainPower.h  ExponentialAdsr.cpp  ExponentialAdsr.h  LinearAdsr.cpp  LinearAdsr.h  PercussiveEnvelope.cpp  PercussiveEnvelope.h  RampageEnvelope.cpp  RampageEnvelope.h  SimpleAdsrComponent.cpp  SimpleAdsrComponent.h
libs/TestRtAudio/TestRtAudioLib/Components/MidiComponent/: MidiComponent.cpp  MidiComponent.h
libs/TestRtAudio/TestRtAudioLib/RtAudioLib/: CMakeLists.txt
libs/TestRtAudio/TestRtAudioLib/RtMidiLib/: CMakeLists.txt
libs/TestRtAudio/main/: CMakeLists.txt  main.cpp
main/: main.cpp
tools/JupiterNotebooks/: g.txt  graph.ipynb
tools/OScopeVcvRack/: RtAudio Monitor.vcv
